fix: select buttons and navbar spacing

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -86,7 +86,7 @@ button {
   font-family: "PublicSans";
 }
 
-button:not(.form-select):hover {
+button:hover {
   background-image: linear-gradient(
     180deg,
     rgb(255, 255, 255),
@@ -136,14 +136,20 @@ button:not(.form-select):hover {
 
 .form-select {
   appearance: none;
-  background: url("~/assets/icons/icon-caret-down.svg") no-repeat;
+  background-image: url("~/assets/icons/icon-caret-down.svg");
+  background-repeat: no-repeat;
   background-position: top 50% right 1rem;
+  background-color: transparent;
   cursor: pointer;
   display: flex;
   align-items: center;
   gap: 0.5rem;
   font-weight: normal;
   color: black;
+}
+
+.form-select:hover {
+  background-image: url("~/assets/icons/icon-caret-down.svg");
 }
 
 .form-options {
